syntax = "proto3";
package cometbft.p2p.v1;

option go_package = "github.com/cometbft/cometbft/api/cometbft/p2p/v1";

import "gogoproto/gogo.proto";
import "cometbft/crypto/v1/keys.proto";

message PacketPing {}

message PacketPong {}

message PacketMsg {
  int32 channel_id = 1 [(gogoproto.customname) = "ChannelID"];
  bool  eof        = 2 [(gogoproto.customname) = "EOF"];
  bytes data       = 3;
}

message Packet {
  oneof sum {
    PacketPing packet_ping = 1;
    PacketPong packet_pong = 2;
    PacketMsg  packet_msg  = 3;
  }
}

message AuthSigMessage {
  cometbft.crypto.v1.PublicKey pub_key = 1 [(gogoproto.nullable) = false];
  bytes                        sig     = 2;
}
